2007-08-26  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_impl.cpp: fixed memory leak
		
2007-08-24  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_font.cpp
		* gameswf/gameswf_function.cpp
		* gameswf/gameswf_function.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_impl.h
		* gameswf/gameswf_movie_def.cpp
		* gameswf/gameswf_movie_def.h
		* gameswf/gameswf_test_ogl.cpp
		* gameswf/gameswf_text.cpp
		Simplified user interface(removed create_library_... stuff),
		the using of cached movie is controlled by s_use cached_movie
		fixed some memory leaks, removed useless save_extern_movie()

2007-08-24  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_impl.cpp: fixed movie_def_impl::create_instance()
		broken earlier
		
2007-08-21  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf_action.cpp,
		* gameswf/gameswf_sprite.cpp:
		a bit cleanup		

2007-08-04  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_button.cpp
		* gameswf/gameswf_character.cpp
		* gameswf/gameswf_character.h
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_sprite.cpp
		* gameswf/gameswf_text.cpp
		* gameswf/gameswf_text.h
		Mainly the implementation of garbage collector is completed.
		It does not worsen performance of gameswf since it is executing
		in downtime of gameswf.

2007-08-03  Vitaly Alexeev <tishka92@yahoo.com>

		* gameswf/gameswf.h
		* gameswf/gameswf_action.cpp
		* gameswf/gameswf_action.h
		* gameswf/gameswf_button.cpp
		* gameswf/gameswf_character.cpp
		* gameswf/gameswf_character.h
		* gameswf/gameswf_dlist.cpp
		* gameswf/gameswf_dlist.h
		* gameswf/gameswf_environment.cpp
		* gameswf/gameswf_environment.h
		* gameswf/gameswf_impl.cpp
		* gameswf/gameswf_object.cpp
		* gameswf/gameswf_object.h
		* gameswf/gameswf_root.cpp
		* gameswf/gameswf_sprite.cpp