@@ -1,3 +1,7 @@
+2007-08-27  Vitaly Alexeev <tishka92@yahoo.com>
+
+		* gameswf/gameswf_object.*: removed useless code
+		
 2007-08-26  Vitaly Alexeev <tishka92@yahoo.com>
 
 		* gameswf/gameswf_impl.cpp: fixed memory leak
